cleanup test code, added tests for tracking entities when static and dynamic invocations are at play